@@ -1,3 +1,13 @@
+2004-02-06  Theodore A. Roth  <troth@openavr.org>
+
+	* configure.ac (AC_INIT): Bump version.
+
+	* doc/avarice.1:
+	* src/jtag.h:
+	* src/jtagrw.cc:
+	* src/main.cc:
+	Add --read-lockbits (-l) option for reading the lockbits.
+
 2004-01-29  Theodore A. Roth  <troth@openavr.org>
 
 	* configure.ac (AC_INIT): Bump version.
